--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -1,24 +1,24 @@
-*{
-    margin: 0;
-    padding: 0
-}
+body {
+      margin: 0;
+     padding: 0;
+    }
 
-   .container {
+    /* Contenedor principal */
+    .container {
       display: flex;
       height: 100vh;
     }
 
-
+    /* Barra lateral */
     .sidebar {
       width: 280px;
       background-color: #f8f9fa;
       border-right: 1px solid #ddd;
       display: flex;
       flex-direction: column;
-      overflow-y: scroll;
     }
 
-
+    /* Perfil arriba */
     .profile {
       display: flex;
       align-items: center;
@@ -38,16 +38,11 @@
     }
 
     .profile-info h4 {
-      font-family: "Open Sans";
-      font-size: medium;
-      font-weight: 400;
       margin: 0;
       font-size: 14px;
     }
 
     .profile-info span {
-      font-family: "Open Sans";
-      font-size: small;
       font-size: 12px;
       color: gray;
     }
@@ -75,7 +70,44 @@
       font-size: 14px;
     }
 
+    /* Lista de chats */
+    .chat-list {
+      flex-grow: 1;
+      overflow-y: auto;
+    }
 
+    .chat-item {
+      display: flex;
+      align-items: center;
+      padding: 12px;
+      border-bottom: 1px solid #eee;
+      cursor: pointer;
+    }
+
+    .chat-item:hover {
+      background-color: #f1f1f1;
+    }
+
+    .chat-avatar {
+      width: 35px;
+      height: 35px;
+      border-radius: 50%;
+      background-color: #ccc;
+      margin-right: 10px;
+    }
+
+    .chat-info h5 {
+      margin: 0;
+      font-size: 14px;
+    }
+
+    .chat-info p {
+      margin: 0;
+      font-size: 12px;
+      color: gray;
+    }
+
+    /* Contenido principal */
     .main {
       flex-grow: 1;
       display: flex;
@@ -86,18 +118,17 @@
     }
 
     .main img {
-      width: 200px;
+      width: 100px;
       margin-bottom: 20px;
     }
 
-    .main h1{
-    font-family: "Roboto";
-    font-weight: 400;
-    font-size: 50px;  
+    .main h2 {
+      margin: 0;
+      font-size: 22px;
+      color: #333;
     }
 
-.subtitles-content{
-   font-family: "Open Sans";
-    font-size: large;
-    font-weight: 400;
-}
+    .main p {
+      color: gray;
+      font-size: 14px;
+    }
