--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,10 +85,10 @@
       text-align: center;
     }
 
-    .main img {
+    /*.main img {
       width: 200px;
       margin-bottom: 20px;
-    }
+    }*/
 
     .main h1{
     font-family: "Roboto";
