--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,7 @@
 
 
     .main {
+        background-color: #E8EBE4;
       flex-grow: 1;
       display: flex;
       justify-content: center;
@@ -85,10 +86,10 @@
       text-align: center;
     }
 
-    /*.main img {
+    .main img {
       width: 200px;
       margin-bottom: 20px;
-    }*/
+    }
 
     .main h1{
     font-family: "Roboto";
